# desktop-pet

./: Cargo.toml
.github/workflows/: rust.yml
.zed/: tasks.json
src/: animated_sprite_sheet.rs  main.rs  pet.rs
