[package]
name = "desktop-pet"
version = "1.0.0-alpha.1"
edition = "2021"

[dependencies]
bevy = "0.13.2"

[target.'cfg(target_os = "macos")'.dependencies]
winit = { version = "0.29", default-features = false }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
